# pve-rs

./: .gitignore  Cargo.toml  Makefile
debian/: changelog  control  rules
src/: lib.rs
src/apt/: repositories.rs
src/openid/: mod.rs
