[package]
name = "pve-rs"
version = "0.2.3"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2018"
license = "AGPL-3"
description = "PVE parts which have been ported to Rust"
homepage = "https://www.proxmox.com"
exclude = [
    "build",
    "debian",
    "PVE",
]

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0"
proxmox = { version = "0.12.1", default-features = false }
perlmod = { version = "0.5.2", features = [ "exporter" ] }
proxmox-apt = "0.6.0"
proxmox-openid = "0.6.1"
serde = "1.0"
